# src/controllers/customer.ts
@@ -22,7 +22,10 @@ export class CustomerController {
     const customer = await this.repository.get(id)
 
     if (!customer) {
-      res.status(404).send(`Customer with id ${id} not found`)
+      res.status(404).send({
+        type: 'Not found',
+        message: `Customer with id ${id} not found`,
+      })
     } else {
       res.status(200).send(customer)
     }
@@ -37,18 +40,18 @@ export class CustomerController {
 
     if (hasErrors instanceof Array && hasErrors.length > 0) {
       res.status(400).send({
-        message: `Invalid attribute(s): ${(hasErrors as ClassValidationError[]).map((e) => e.property)}`,
+        type: 'Invalid attribute(s)',
+        message: `${(hasErrors as ClassValidationError[]).map((e) => e.property)}`,
       })
     } else {
       try {
         const customer = await this.repository.create(createCustomerDto)
         res.status(201).send(customer)
       } catch (error: Error | unknown) {
-        res
-          .status(404)
-          .send(
-            `Validation error: ${(error as ValidationError).errors?.[0]?.message}`,
-          )
+        res.status(400).send({
+          type: 'Validation error',
+          message: `${(error as ValidationError).errors?.[0]?.message}`,
+        })
       }
     }
   }
@@ -59,18 +62,18 @@ export class CustomerController {
 
     if (hasErrors instanceof Array && hasErrors.length > 0) {
       res.status(400).send({
-        message: `Invalid attribute(s): ${(hasErrors as ClassValidationError[]).map((e) => e.property)}`,
+        type: 'Invalid attribute(s)',
+        message: `${(hasErrors as ClassValidationError[]).map((e) => e.property)}`,
       })
     }
     try {
       await this.repository.update(req.body)
       res.status(200).send(req.body)
     } catch (error) {
-      res
-        .status(404)
-        .send(
-          `Validation error: ${(error as ValidationError).errors?.[0]?.message}`,
-        )
+      res.status(404).send({
+        type: 'Validation error',
+        message: `${(error as ValidationError).errors?.[0]?.message}`,
+      })
     }
   }
 
@@ -80,7 +83,10 @@ export class CustomerController {
       await this.repository.delete(id)
       res.status(200).send({})
     } catch (error) {
-      console.error(`Unable to delete customer with id ${id}`)
+      res.status(404).send({
+        type: 'Non processable entity',
+        message: `Unable to delete customer with id ${id}`,
+      })
     }
   }
 }
